[workspace]
members = ["rush_core","rush_expr_engine","rush_lua_engine","example", "rush_wasm_engine","example/wasm_example"]

[workspace.package]
edition = "2021"
authors = ["Teshin <1443965173@qq.com>"]
repository = "https://github.com/woshihaoren4/rush"
keywords = ["rush"]
description = "The rules engine is based on the rete algorithm"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
wd_tools = {version = "0.8.12",features = ["point-free","sync"]}
anyhow = "1.0.75"
serde = {version = "1.0.188",features = ["derive"]}
serde_json = "1.0.105"
async-trait = "0.1.73"
tokio = {version = "1.32",features = ["full"]}
async-channel = {version = "1.9.0"}