[package]
name = "example"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calc_rule = {path = "../calc_rule"}
rush_core = {path = "../rush_core"}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "expression_parse"
harness = false

[[bench]]
name = "assign_simple_parse"
harness = false

## https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[[bin]]
name = "example"
path = "src/main.rs"
bench = false
