[package]
name = "example"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expr_engine = {path = "../expr_engine" }
rush_core = {path = "../rush_core"}
lua_engine = {path = "../lua_engine",features = ["rule-flow"]}
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports","async_tokio"] }

[[bench]]
name = "expression_parse"
harness = false

[[bench]]
name = "assign_simple_parse"
harness = false

[[bench]]
name = "async_rush"
harness = false

[[bench]]
name = "function_benchmark"
harness = false

## https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[[bin]]
name = "example"
path = "src/main.rs"
bench = false
