[package]
name = "rush_expr_engine"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wd_tools.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rush_core = {version = "0.1", path = "../rush_core"}