[package]
name = "wasm_engine"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = {version = "4.1.1"}
anyhow.workspace = true
wd_tools.workspace = true
async-channel.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true